--- a/_data/werken-bij-ons.yml
+++ b/_data/werken-bij-ons.yml
@@ -1,14 +1,13 @@
 title: Werken bij
 vacature-open: false
 pagina-afbeelding: /assets/images/upload/parachute.jpg
-landing-tekst: Hier komt tekst We zoeken iemand die met zelfvertrouwen en een
-  frisse blik voor de groep kan staan en ook in staat is individuele
-  coachgesprekken te voeren. Je frisse blik en creativiteit zijn van harte
-  welkom, evenals je vermogen om, ongeacht de omstandigheden, op een
-  constructieve manier om te gaan met groepsdynamiek. Je blik is breder dan
-  persoonlijke ontwikkeling alleen, je hebt interesse in organisatie
-  ontwikkeling, van strategie tot uitvoering en bent eager om daar meer over te
-  leren.
+landing-tekst: We zoeken iemand die met zelfvertrouwen en een frisse blik voor
+  de groep kan staan en ook in staat is individuele coachgesprekken te voeren.
+  Je frisse blik en creativiteit zijn van harte welkom, evenals je vermogen om,
+  ongeacht de omstandigheden, op een constructieve manier om te gaan met
+  groepsdynamiek. Je blik is breder dan persoonlijke ontwikkeling alleen, je
+  hebt interesse in organisatie ontwikkeling, van strategie tot uitvoering en
+  bent eager om daar meer over te leren.
 kop: Als coach/begeleider van ontwikkelprogramma’s
 wat-je-doet: Wat doe je als?
 wat-je-doet-tekst: >-
