Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -60,11 +60,11 @@ wat-wij-doen-1-tekst: >-
 
   * Cultuurontwikkeling: betere prestaties en een (pro)actievere cultuur.
 
-  * Reorganisaties/fusies/ samenwerkingsverbanden optimaliseren
+  * Reorganisaties/fusies/samenwerkingsverbanden optimaliseren
+
+  * Compliance en integriteitsvraagstukken
 
   * Invoeren en begeleiden van Agile/Scrum
-
-  * Programma en projectmanagement
 wat-wij-doen-1-contact: |-
   **Meer weten?**\
   Neem bijvoorbeeld contact op met Sjef of Zilla.
