Update Teksten “ctp-contact”

--- a/_data/ctp-contact.yml
+++ b/_data/ctp-contact.yml
@@ -18,7 +18,7 @@ functie: Functie*
 telefoonnummer: Telefoonnummer*
 welke: Voor welke avond meld je je aan?*
 data:
-  - datum: 9 februari 2023 | 19.30 - 21.30
+  - datum: 23 maart 2023 | 19.30 - 21.30
   - datum: 13 juni 2023 | 19.30 - 21.30
   - datum: 9 november 2023 | 19.30 - 21.30
 hoe: Via wie of hoe weet je van de Connect to Perform avond?
