Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -60,7 +60,7 @@ wat-wij-doen-1-tekst: >-
 
   * Cultuurontwikkeling: betere prestaties en een (pro)actievere cultuur.
 
-  * Reorganisaties/fusies/samenwerkingsverbanden optimaliseren
+  * Reorganisaties, fusies, samenwerkingsverbanden optimaliseren
 
   * Compliance en integriteitsvraagstukken
 
