--- a/_data/ctp-contact.yml
+++ b/_data/ctp-contact.yml
@@ -18,8 +18,7 @@ functie: Functie*
 telefoonnummer: Telefoonnummer*
 welke: Voor welke avond meld je je aan?*
 data:
-  - datum: ma 8 april
-  - datum: di 8 oktober
+  - datum: Er zijn op dit moment geen data gepland
 hoe: Via wie of hoe weet je van de Connect to Perform avond?
 reden: Wat is je reden van aanmelden?
 success: Dankjewel voor je bericht!
