--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,6 +1,7 @@
 hoe-wij-werken: /hoe-wij-werken
 wat-wij-doen: /wat-wij-doen
 connect-to-perform: /connect-to-perform
+vertrouwenspersoon: /vertrouwenspersoon
 contact: /contact
 werken-bij: /werken-bij
 wie-wij-zijn: /wie-wij-zijn
