Update Teksten “vertrouwenspersoon”

--- a/_data/vertrouwenspersoon.yml
+++ b/_data/vertrouwenspersoon.yml
@@ -1,17 +1,80 @@
 title: Vertrouwenspersoon
-pagina-afbeelding: /assets/images/upload/verandering-transitie.jpg
 landing-tekst: ‘Connect to Perform’ is het gedachtegoed dat de basis vormt voor
   Human Connection’s advieswerk. Het demonstreert hoe teams en organisaties naar
   een meer effectieve én prettige werkwijze te bewegen zijn door (onderlinge)
   verbinding te maken. Om de brug te slaan tussen ’theorie’ en ‘zelf toepassen’,
   hebben we een spel ontworpen wat met groot succes in organisaties en op onze
   open avonden gespeeld wordt.
+pagina-afbeelding: /assets/images/upload/verandering-transitie.jpg
 pagina-titel: Vertrouwenspersoon
-
 vertrouwenspersoon-tekst: >-
-  Tijdens het spel krijg je aan de hand van een fictieve situatie inzicht in de
-  methodiek en mogelijke interventies om de organisatiecultuur en prestaties te
-  ontwikkelen. Er wordt helder hoe je kunt signaleren in welke ontwikkelfase een
-  organisatie (of team)cultuur zich bevindt. Op basis van voorbeelden uit de
-  praktijk zie je spelenderwijs in wat er nodig is om de volgende ontwikkelstap
-  te maken en wat juist zaken zijn die averechts uitpakken.
+  Vertrouwenspersoon en preventie als prioriteit voor een sociaal veilige
+  werkplek 
+
+
+  In een tijd waarin de nadruk steeds meer komt te liggen op het creëren van een gezond en plezierig werkklimaat, rijst de vraag: hoe kunnen organisaties een veilige omgeving waarborgen voor hun medewerkers? Het benoemen van een (interne) vertrouwenspersoon is voor bedrijven een veel gekozen eerste stap. Echter om daadwerkelijk een veilige werkomgeving te creëren en houden, zijn bredere maatregelen en soms zelfs een cultuurverandering nodig. 
+
+
+  Het integreren van sociale veiligheid op de werkplek blijkt namelijk een cruciale factor te zijn in het streven naar een duurzaam gezonde organisatie. 
+
+
+  Als er een prettig leer- en werkklimaat is, zijn de resultaten beter, wordt er effectiever gewerkt en is er meer innovatie mogelijk is. Maar wat houdt dit precies in, en hoe kunnen organisaties dit realiseren?
+
+
+  ### Wat is een sociaal veilige werkplek?
+
+
+  Iedere werkplek is anders, iedere bedrijfscultuur is anders. Toch is er een aantal elementen waaraan je herkent dat er sprake is van een sociaal veilige werkplek:
+
+
+
+
+  * Medewerkers uiten zich makkelijk. 
+
+  * Ze praten óok over knelpunten in de uitvoering van hun werk.
+
+  * Ze praten open en vrij.
+
+  * Ze spreken zich uit zonder angst voor de gevolgen.
+
+
+
+
+  Brede, systemische benadering 
+
+
+  Human Connection onderscheidt zich door een bredere benadering van het creëren van een sociale veilige werkplek, waarbij een vertrouwenspersoon een essentieel onderdeel vormt. 
+
+
+
+
+  De focus ligt op preventieve maatregelen, naast het bieden van hulp bij contextanalyse, interventies en begeleiding, mocht het toch tot escalatie komen. We doen dit met een doordachte en systemische aanpak die we al sinds 1998 gebruiken en doorontwikkelen. Kijk voor meer informatie hier <linken naar pagina met methoden en werkvormen>
+
+
+
+
+  Human Connection biedt:
+
+
+  * Gecertificeerde vertrouwenspersonen
+
+  * Ieder vertrouwenspersoon brengt minimaal een extra expertise mee
+
+  * Vervanging bij ziekte of vakantie
+
+  * Onderlinge intervisie, ontsluit een nog breder perspectief op kwesties
+
+  * Ervaring met het betrekken van de hele organisatie bij start, vervolg en executie van (verander)traject.  
+
+
+
+
+  Meer weten?
+
+
+  Wil je meer weten over hoe Human Connection kijkt naar de rol van vertrouwenspersoon en preventie als prioriteit binnen een gezonde werkplek? Download hier ons whitepaper met sleutelfactoren voor van een sociaal veilige werkomgeving. 
+
+
+
+
+  <!--EndFragment-->
