--- a/_data/vertrouwenspersoon.yml
+++ b/_data/vertrouwenspersoon.yml
@@ -12,13 +12,13 @@ vertrouwenspersoon-tekst: >-
   werkplek 
 
 
-  In een tijd waarin de nadruk steeds meer komt te liggen op het creëren van een gezond en plezierig werkklimaat, rijst de vraag: hoe kunnen organisaties een veilige omgeving waarborgen voor hun medewerkers? Het benoemen van een (interne) vertrouwenspersoon is voor bedrijven een veel gekozen eerste stap. Echter om daadwerkelijk een veilige werkomgeving te creëren en houden, zijn bredere maatregelen en soms zelfs een cultuurverandering nodig. 
+  In een tijd waarin de nadruk steeds meer komt te liggen op het **creëren van een gezond en plezierig werkklimaat**, rijst de vraag: hoe kunnen organisaties **een veilige omgeving waarborgen voor hun medewerkers?** Het benoemen van een (interne) vertrouwenspersoon is voor bedrijven een veel gekozen **eerste stap.** Echter om daadwerkelijk een veilige werkomgeving te creëren en houden, zijn **bredere maatregelen en soms zelfs een cultuurverandering nodig.** 
 
 
-  Het integreren van sociale veiligheid op de werkplek blijkt namelijk een cruciale factor te zijn in het streven naar een duurzaam gezonde organisatie. 
+  Het **integreren van sociale veiligheid op de werkplek** blijkt namelijk een cruciale factor te zijn in het streven naar **een duurzaam gezonde organisatie.** 
 
 
-  Als er een prettig leer- en werkklimaat is, zijn de resultaten beter, wordt er effectiever gewerkt en is er meer innovatie mogelijk is. Maar wat houdt dit precies in, en hoe kunnen organisaties dit realiseren?
+  Als er een **prettig leer- en werkklimaat is, zijn de resultaten beter, wordt er effectiever gewerkt en is er meer innovatie** mogelijk is. Maar wat houdt dit precies in, en hoe kunnen organisaties dit realiseren?
 
 
   ### Wat is een sociaal veilige werkplek?
@@ -40,7 +40,7 @@ vertrouwenspersoon-tekst: >-
 
 
 
-  Brede, systemische benadering 
+  ### Brede, systemische benadering 
 
 
   Human Connection onderscheidt zich door een bredere benadering van het creëren van een sociale veilige werkplek, waarbij een vertrouwenspersoon een essentieel onderdeel vormt. 
@@ -53,7 +53,7 @@ vertrouwenspersoon-tekst: >-
 
 
 
-  Human Connection biedt:
+  ### Human Connection biedt:
 
 
   * Gecertificeerde vertrouwenspersonen
@@ -69,7 +69,7 @@ vertrouwenspersoon-tekst: >-
 
 
 
-  Meer weten?
+  ### Meer weten?
 
 
   Wil je meer weten over hoe Human Connection kijkt naar de rol van vertrouwenspersoon en preventie als prioriteit binnen een gezonde werkplek? Download hier ons whitepaper met sleutelfactoren voor van een sociaal veilige werkomgeving.
