Update Teksten “vertrouwenspersoon”

--- a/_data/vertrouwenspersoon.yml
+++ b/_data/vertrouwenspersoon.yml
@@ -7,24 +7,34 @@ landing-tekst: ‘Connect to Perform’ is het gedachtegoed dat de basis vormt v
   open avonden gespeeld wordt.
 pagina-afbeelding: /assets/images/upload/verandering-transitie.jpg
 pagina-titel: Vertrouwenspersoon
-vertrouwenspersoon-tekst: >-
-  Vertrouwenspersoon en preventie als prioriteit voor een sociaal veilige
-  werkplek 
+vertrouwenspersoon-tekst: "Vertrouwenspersoon en preventie als prioriteit voor
+  een sociaal veilige werkplek 
 
 
-  In een tijd waarin de nadruk steeds meer komt te liggen op het **creëren van een gezond en plezierig werkklimaat**, rijst de vraag: hoe kunnen organisaties **een veilige omgeving waarborgen voor hun medewerkers?** Het benoemen van een (interne) vertrouwenspersoon is voor bedrijven een veel gekozen **eerste stap.** Echter om daadwerkelijk een veilige werkomgeving te creëren en houden, zijn **bredere maatregelen en soms zelfs een cultuurverandering nodig.** 
+  In een tijd waarin de nadruk steeds meer komt te liggen op het **creëren van
+  een gezond en plezierig werkklimaat**, rijst de vraag: hoe kunnen organisaties
+  **een veilige omgeving waarborgen voor hun medewerkers?** Het benoemen van een
+  (interne) vertrouwenspersoon is voor bedrijven een veel gekozen **eerste
+  stap.** Echter om daadwerkelijk een veilige werkomgeving te creëren en houden,
+  zijn **bredere maatregelen en soms zelfs een cultuurverandering nodig.** 
 
 
-  Het **integreren van sociale veiligheid op de werkplek** blijkt namelijk een cruciale factor te zijn in het streven naar **een duurzaam gezonde organisatie.** 
+  Het **integreren van sociale veiligheid op de werkplek** blijkt namelijk een
+  cruciale factor te zijn in het streven naar **een duurzaam gezonde
+  organisatie.** 
 
 
-  Als er een **prettig leer- en werkklimaat is, zijn de resultaten beter, wordt er effectiever gewerkt en is er meer innovatie** mogelijk is. Maar wat houdt dit precies in, en hoe kunnen organisaties dit realiseren?
+  Als er een **prettig leer- en werkklimaat is, zijn de resultaten beter,
+  wordt er effectiever gewerkt en is er meer innovatie** mogelijk is. Maar wat
+  houdt dit precies in, en hoe kunnen organisaties dit realiseren?
 
 
   ### Wat is een sociaal veilige werkplek?
 
 
-  Iedere werkplek is anders, iedere bedrijfscultuur is anders. Toch is er een aantal elementen waaraan je herkent dat er sprake is van een sociaal veilige werkplek:
+  Iedere werkplek is anders, iedere bedrijfscultuur is anders. Toch is er een
+  aantal elementen waaraan je herkent dat er sprake is van een sociaal veilige
+  werkplek:
 
 
 
@@ -43,12 +53,19 @@ vertrouwenspersoon-tekst: >-
   ### Brede, systemische benadering 
 
 
-  Human Connection onderscheidt zich door een bredere benadering van het creëren van een sociale veilige werkplek, waarbij een vertrouwenspersoon een essentieel onderdeel vormt. 
+  Human Connection onderscheidt zich door een bredere benadering van het
+  creëren van een sociale veilige werkplek, waarbij een vertrouwenspersoon een
+  essentieel onderdeel vormt. 
 
 
 
 
-  De focus ligt op preventieve maatregelen, naast het bieden van hulp bij contextanalyse, interventies en begeleiding, mocht het toch tot escalatie komen. We doen dit met een doordachte en systemische aanpak die we al sinds 1998 gebruiken en doorontwikkelen. Kijk voor meer informatie hier <linken naar pagina met methoden en werkvormen>
+  De focus ligt op preventieve maatregelen, naast het bieden van hulp bij
+  contextanalyse, interventies en begeleiding, mocht het toch tot escalatie
+  komen. We doen dit met een doordachte en systemische aanpak die we al sinds
+  1998 gebruiken en doorontwikkelen. Kijk voor meer informatie
+  [hier](https://www.humanc.nl/hoe-wij-werken/).\r
+
 
 
 
@@ -64,7 +81,8 @@ vertrouwenspersoon-tekst: >-
 
   * Onderlinge intervisie, ontsluit een nog breder perspectief op kwesties
 
-  * Ervaring met het betrekken van de hele organisatie bij start, vervolg en executie van (verander)traject.  
+  * Ervaring met het betrekken van de hele organisatie bij start, vervolg en
+  executie van (verander)traject.  
 
 
 
@@ -72,4 +90,7 @@ vertrouwenspersoon-tekst: >-
   ### Meer weten?
 
 
-  Wil je meer weten over hoe Human Connection kijkt naar de rol van vertrouwenspersoon en preventie als prioriteit binnen een gezonde werkplek? Download hier ons whitepaper met sleutelfactoren voor van een sociaal veilige werkomgeving.
+  Wil je meer weten over hoe Human Connection kijkt naar de rol van
+  vertrouwenspersoon en preventie als prioriteit binnen een gezonde werkplek?
+  Download hier ons whitepaper met sleutelfactoren voor van een sociaal veilige
+  werkomgeving."
