Update Teksten “vertrouwenspersoon”

--- a/_data/vertrouwenspersoon.yml
+++ b/_data/vertrouwenspersoon.yml
@@ -1,28 +1,21 @@
-title: Vertrouwenspersoon
-landing-tekst: ‘Connect to Perform’ is het gedachtegoed dat de basis vormt voor
-  Human Connection’s advieswerk. Het demonstreert hoe teams en organisaties naar
-  een meer effectieve én prettige werkwijze te bewegen zijn door (onderlinge)
-  verbinding te maken. Om de brug te slaan tussen ’theorie’ en ‘zelf toepassen’,
-  hebben we een spel ontworpen wat met groot succes in organisaties en op onze
-  open avonden gespeeld wordt.
-pagina-afbeelding: /assets/images/upload/verandering-transitie.jpg
-pagina-titel: Vertrouwenspersoon
-vertrouwenspersoon-tekst: >-
-  **Vertrouwenspersoon en preventie als prioriteit voor een sociaal veilige
-  werkplek** 
-
-
-  In een tijd waarin de nadruk steeds meer komt te liggen op het **creëren van een gezond en plezierig werkklimaat**, rijst de vraag: hoe kunnen organisaties **een veilige omgeving waarborgen voor hun medewerkers?** Het benoemen van een (interne) vertrouwenspersoon is voor bedrijven een veel gekozen **eerste stap.** Echter om daadwerkelijk een veilige werkomgeving te creëren en houden, zijn **bredere maatregelen en soms zelfs een cultuurverandering nodig.** 
+title: "**Vertrouwenspersoon en preventie als prioriteit voor een sociaal
+  veilige werkplek**"
+landing-tekst: >-
+  In een tijd waarin de nadruk steeds meer komt te liggen op het **creëren van
+  een gezond en plezierig werkklimaat**, rijst de vraag: hoe kunnen organisaties
+  **een veilige omgeving waarborgen voor hun medewerkers?** Het benoemen van een
+  (interne) vertrouwenspersoon is voor bedrijven een veel gekozen **eerste
+  stap.** Echter om daadwerkelijk een veilige werkomgeving te creëren en houden,
+  zijn **bredere maatregelen en soms zelfs een cultuurverandering nodig.** 
 
 
   Het **integreren van sociale veiligheid op de werkplek** blijkt namelijk een cruciale factor te zijn in het streven naar **een duurzaam gezonde organisatie.** 
 
 
   Als er een **prettig leer- en werkklimaat is, zijn de resultaten beter, wordt er effectiever gewerkt en is er meer innovatie** mogelijk is. Maar wat houdt dit precies in, en hoe kunnen organisaties dit realiseren?
-
-
-
-
+pagina-afbeelding: /assets/images/upload/verandering-transitie.jpg
+pagina-titel: Vertrouwenspersoon
+vertrouwenspersoon-tekst: >-
   ### Wat is een sociaal veilige werkplek?
 
 
@@ -38,8 +31,6 @@ vertrouwenspersoon-tekst: >-
   * Ze spreken zich uit zonder angst voor de gevolgen.
 
 
-
-
   ### Brede, systemische benadering 
 
 
@@ -47,8 +38,6 @@ vertrouwenspersoon-tekst: >-
 
 
   De focus ligt op preventieve maatregelen, naast het bieden van hulp bij contextanalyse, interventies en begeleiding, mocht het toch tot escalatie komen. We doen dit met een doordachte en systemische aanpak die we al sinds 1998 gebruiken en doorontwikkelen. Kijk voor meer informatie [hier](https://www.humanc.nl/hoe-wij-werken/).
-
-
 
 
   ### Human Connection biedt:
@@ -63,8 +52,6 @@ vertrouwenspersoon-tekst: >-
   * Onderlinge intervisie, ontsluit een nog breder perspectief op kwesties
 
   * Ervaring met het betrekken van de hele organisatie bij start, vervolg en executie van (verander)traject.  
-
-
 
 
   ### Meer weten?
