Update Teksten “vertrouwenspersoon”

--- a/_data/vertrouwenspersoon.yml
+++ b/_data/vertrouwenspersoon.yml
@@ -1,12 +1,10 @@
-title: "**Vertrouwenspersoon en preventie als prioriteit voor een sociaal
-  veilige werkplek**"
+title: Vertrouwenspersoon
 landing-tekst: >-
-  In een tijd waarin de nadruk steeds meer komt te liggen op het **creëren van
-  een gezond en plezierig werkklimaat**, rijst de vraag: hoe kunnen organisaties
-  **een veilige omgeving waarborgen voor hun medewerkers?** Het benoemen van een
-  (interne) vertrouwenspersoon is voor bedrijven een veel gekozen **eerste
-  stap.** Echter om daadwerkelijk een veilige werkomgeving te creëren en houden,
-  zijn **bredere maatregelen en soms zelfs een cultuurverandering nodig.** 
+  **Vertrouwenspersoon en preventie als prioriteit voor een sociaal veilige
+  werkplek**
+
+
+  In een tijd waarin de nadruk steeds meer komt te liggen op het **creëren van een gezond en plezierig werkklimaat**, rijst de vraag: hoe kunnen organisaties **een veilige omgeving waarborgen voor hun medewerkers?** Het benoemen van een (interne) vertrouwenspersoon is voor bedrijven een veel gekozen **eerste stap.** Echter om daadwerkelijk een veilige werkomgeving te creëren en houden, zijn **bredere maatregelen en soms zelfs een cultuurverandering nodig.** 
 
 
   Het **integreren van sociale veiligheid op de werkplek** blijkt namelijk een cruciale factor te zijn in het streven naar **een duurzaam gezonde organisatie.** 
@@ -57,4 +55,4 @@ vertrouwenspersoon-tekst: >-
   ### Meer weten?
 
 
-  Wil je meer weten over hoe Human Connection kijkt naar de rol van vertrouwenspersoon en preventie als prioriteit binnen een gezonde werkplek? Download hier ons whitepaper met sleutelfactoren voor van een sociaal veilige werkomgeving.
+  Wil je meer weten over hoe Human Connection kijkt naar de rol van vertrouwenspersoon en preventie als prioriteit binnen een gezonde werkplek? Download hier ons whitepaper met sleutelfactoren van een sociaal veilige werkomgeving.
