Update Teksten “vertrouwenspersoon”

--- a/_data/vertrouwenspersoon.yml
+++ b/_data/vertrouwenspersoon.yml
@@ -4,7 +4,7 @@ landing-tekst: >-
   werkplek**
 
 
-  In een tijd waarin de nadruk steeds meer komt te liggen op het **creëren van een gezond en plezierig werkklimaat**, rijst de vraag: hoe kunnen organisaties **een veilige omgeving waarborgen voor hun medewerkers?** Het benoemen van een (interne) vertrouwenspersoon is voor bedrijven een veel gekozen **eerste stap.** Echter om daadwerkelijk een veilige werkomgeving te creëren en houden, zijn **bredere maatregelen en soms zelfs een cultuurverandering nodig.** 
+  In een tijd waarin de nadruk steeds meer komt te liggen op het **creëren van een gezond en plezierig werkklimaat**, rijst de vraag: hoe kunnen organisaties **een veilige omgeving waarborgen voor hun medewerkers?** Het benoemen van een (interne) vertrouwenspersoon is voor bedrijven een veel gekozen **eerste stap.** Om daadwerkelijk een veilige werkomgeving te creëren en houden, zijn daarnaast **bredere maatregelen en soms zelfs een cultuurverandering nodig.** 
 
 
   Het **integreren van sociale veiligheid op de werkplek** blijkt namelijk een cruciale factor te zijn in het streven naar **een duurzaam gezonde organisatie.** 
