Update Teksten “vertrouwenspersoon”

--- a/_data/vertrouwenspersoon.yml
+++ b/_data/vertrouwenspersoon.yml
@@ -11,7 +11,7 @@ landing-tekst: >-
 
 
   Als er een **prettig leer- en werkklimaat is, zijn de resultaten beter, wordt er effectiever gewerkt en is er meer innovatie** mogelijk is. Maar wat houdt dit precies in, en hoe kunnen organisaties dit realiseren?
-pagina-afbeelding: /assets/images/upload/impact-kleine-verandering-systeem.jpg
+pagina-afbeelding: /assets/images/upload/sociale-veiligheid.webp
 pagina-titel: Vertrouwenspersoon
 vertrouwenspersoon-tekst: >-
   ### Wat is een sociaal veilige werkplek?
